@@ -1,4 +1,9 @@
-$Id: ChangeLog.txt,v 1.6 2006/02/15 12:56:59 gerrit-albrecht Exp $
+$Id: ChangeLog.txt,v 1.7 2006/02/22 11:19:15 gerrit-albrecht Exp $
+
+2005-02-22  Gerrit M. Albrecht  <gerrit-albrecht@users.berlios.de>
+
+	* FileVersionInfo returned wrong data because of a missing
+	  resource language parameter.
 
 2005-02-15  Gerrit M. Albrecht  <gerrit-albrecht@users.berlios.de>
 
